fix approval message alignment

--- a/client/src/CSS/ApprovalPage.css
+++ b/client/src/CSS/ApprovalPage.css
@@ -20,3 +20,7 @@ table {
   border-color: #4651af;
   clear: both;
 }
+
+.right_content {
+  padding: 20px;
+}
