--- a/client/src/CSS/SubmissionTable.css
+++ b/client/src/CSS/SubmissionTable.css
@@ -21,7 +21,7 @@ td.date {
   width: 100px;
 }
 .submissionSection {
-  margin: 0px 50px 50px;
+  margin: 20px 0px;
   padding: 30px;
   border: 3px solid #d0d2ec;
   color: black;
@@ -88,10 +88,23 @@ label {
 
 .wrapper {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-between !important;
   text-align: center;
+}
+
+.column-1 {
+  flex: 1;
+}
+
+.column-2 {
+  flex: 2;
 }
 
 .wrapper .column {
   flex-basis: 33%;
+}
+
+.wrapper-right {
+  display: flex;
+  justify-content: flex-end;
 }
